--- a/index.html
+++ b/index.html
@@ -8,33 +8,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylesIndex.css">
-    <title>Home</title>
+    <title>Inicio</title>
 </head>
 
 <body>
     <div class="container-fluid container-main">
         <div class="row ">
             <nav class="navbar navbar-expand-lg  ">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                <div class="container-fluid ">
+                    <a class="navbar-brand" href="./index.html"><img class="imgLogo" src="./img/Anteiku-logos_black.png"
+                            alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="collapse navbar-collapse navbar-scroll" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link " aria-current="page" href="#">Home</a>
+                                <a class="nav-link " aria-current="page" href="./index.html"> Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
+                                <a class="nav-link" href="#">Nuestra carta</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
+                                <a class="nav-link" href="#">Contacto</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link ">Disabled</a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
