--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <div class="container-fluid container-main">
+    <div class="container-fluid container-main bg-image">
         <div class="row ">
-            <nav class="navbar navbar-expand-lg  ">
+            <nav class="navbar navbar-expand-lg navbar-light-lg navbar-dark ">
                 <div class="container-fluid ">
-                    <a class="navbar-brand" href="./index.html"><img class="imgLogo" src="./img/Anteiku-logos_black.png"
+                    <a class="navbar-brand" href="./index.html"><img class="imgLogo" src="./img/Anteiku-logos_white.png"
                             alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,15 +39,17 @@
                 </div>
             </nav>
         </div>
+        <hr>
 
 
     </div>
 
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+crossorigin="anonymous"></script>
 
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
 
 </html>
