Añadididos varios comentarios tanto en html y css

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 </head>
 
 <body>
+    <!-- Contenedor principal de la pagina -->
     <div class="container-fluid container-main bg-image">
         <div class="row ">
-            <nav class="navbar navbar-expand-lg navbar-light-lg navbar-dark ">
+            <!-- Barra de navegacion superior -->
+            <nav class="navbar navbar-expand-lg navbar-dark ">
                 <div class="container-fluid ">
                     <a class="navbar-brand" href="./index.html"><img class="imgLogo" src="./img/Anteiku-logos_white.png"
                             alt=""></a>
+                            <!-- Boton que despliega la barra de navegacion en responsive (movil) -->
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    <!-- Barra de navegacion colapsable en responsive (movil) -->
                     <div class="collapse navbar-collapse navbar-scroll" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
@@ -33,13 +37,13 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contacto</a>
                             </li>
-
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
-        <hr>
+
+
 
 
     </div>
