Añadido fuente externa para los textos descriptivos, además, implementadas varias funcionalidades nuevas y estructura reorganizada en columnas y rows que faltaban

--- a/index.html
+++ b/index.html
@@ -8,50 +8,73 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylesIndex.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Inicio</title>
 </head>
 
 <body>
     <!-- Contenedor principal de la pagina -->
-    <div class="container-fluid container-main bg-image">
-        <div class="row ">
-            <!-- Barra de navegacion superior -->
-            <nav class="navbar navbar-expand-lg navbar-dark ">
-                <div class="container-fluid ">
-                    <a class="navbar-brand" href="./index.html"><img class="imgLogo" src="./img/Anteiku-logos_white.png"
-                            alt=""></a>
-                            <!-- Boton que despliega la barra de navegacion en responsive (movil) -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <!-- Barra de navegacion colapsable en responsive (movil) -->
-                    <div class="collapse navbar-collapse navbar-scroll" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link " aria-current="page" href="./index.html"> Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Nuestra carta</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contacto</a>
-                            </li>
-                        </ul>
+    <div class="container-fluid container-main ">
+        <div class="row row1 ">
+            <div class="col col1 ">
+                <!-- Barra de navegacion superior -->
+                <nav class="navbar navbar-expand-lg navbar-dark ">
+                    <div class="container-fluid ">
+                        <a class="navbar-brand" href="./index.html"><img class="imgLogo"
+                                src="./img/Anteiku-logos_white.png" alt=""></a>
+                        <!-- Boton que despliega la barra de navegacion en responsive (movil) -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Barra de navegacion colapsable en responsive (movil) -->
+                        <div class="collapse navbar-collapse navbar-scroll" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link " aria-current="page" href="./index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/carta.html">Nuestra carta</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
         </div>
+        <div class="row row2">
+            <div class="col col-lg-5 col2 ">
+                <p>El restaurante de ramen Anteiku es conocido por su caldo de pollo cocinado durante horas con hierbas
+                    y especias. Más de 30 años de experiencia confirman la calidad de este delicioso ramen en un
+                    ambiente que transportará al comensal al mismísimo Japón.
+                    Un lugar que no abandona su esencia japonesa donde se disfruta de la autenticidad del ramen japonés.
+                </p>
+            </div>
 
+            <!--  -->
+        </div>
+        <div class="row row3">
+            <div class="col col3">
+                <button type="button" class="btn btn-outline-secondary ">Twitter</button>
+                <button type="button" class="btn btn-outline-secondary">Instagram</button>
 
-
-
+                <!-- <p>Los platos más populares incluyen el ramen de pollo con cebolla,
+                    el ramen de cerdo con huevo y el ramen vegetariano. 
+                    También pueden ofrecer opciones adicionales como gyozas
+                     (dumplings fritos o al vapor), karaage (pollo frito)
+                      y onigiri (bocadillos de arroz).</p> -->
+            </div>
+        </div>
     </div>
 
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
 </body>
 
