Añadida parte de redes sociales y retoques de colocación minimos

--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 
             <!--  -->
         </div>
-        <div class="row row3">
+        <div class="row row3 text-center">
             <div class="col col3">
-                <button type="button" class="btn btn-outline-secondary ">Twitter</button>
-                <button type="button" class="btn btn-outline-secondary">Instagram</button>
+                <p>SIGUENOS EN NUESTRAS REDES</p>
+                <button type="button" class="btn btn-outline-secondary "><i class="bi bi-twitter"></i> Twitter</button>
+                <button type="button" class="btn btn-outline-secondary"><i class="bi bi-instagram"></i>
+                    Instagram</button>
 
                 <!-- <p>Los platos más populares incluyen el ramen de pollo con cebolla,
                     el ramen de cerdo con huevo y el ramen vegetariano. 
