Pequeña correcion en las fuentes de la página, añadido mas brillo a la letra, se veía oscura. Pequeño retoque tambien a la parte de las redes sociales

--- a/index.html
+++ b/index.html
@@ -46,29 +46,23 @@
                 </nav>
             </div>
         </div>
+          <!-- Row y column del texto descriptivo blanco situado en el centro de la pagina -->
         <div class="row row2">
             <div class="col col-lg-5 col2 ">
                 <p>El restaurante de ramen Anteiku es conocido por su caldo de pollo cocinado durante horas con hierbas
-                    y especias. Más de 30 años de experiencia confirman la calidad de este delicioso ramen en un
+                    y especias. Más de 30 años de experiencia confirman la calidad de este delicioso plato en un
                     ambiente que transportará al comensal al mismísimo Japón.
-                    Un lugar que no abandona su esencia japonesa donde se disfruta de la autenticidad del ramen japonés.
+                    Un lugar que no abandona su esencia nipona donde se disfruta de la autenticidad del ramen japonés.
                 </p>
             </div>
-
-            <!--  -->
         </div>
+          <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
         <div class="row row3 text-center">
             <div class="col col3">
-                <p>SIGUENOS EN NUESTRAS REDES</p>
+                <p>SÍGUENOS EN NUESTRAS REDES</p>
                 <button type="button" class="btn btn-outline-secondary "><i class="bi bi-twitter"></i> Twitter</button>
                 <button type="button" class="btn btn-outline-secondary"><i class="bi bi-instagram"></i>
                     Instagram</button>
-
-                <!-- <p>Los platos más populares incluyen el ramen de pollo con cebolla,
-                    el ramen de cerdo con huevo y el ramen vegetariano. 
-                    También pueden ofrecer opciones adicionales como gyozas
-                     (dumplings fritos o al vapor), karaage (pollo frito)
-                      y onigiri (bocadillos de arroz).</p> -->
             </div>
         </div>
     </div>
