Pagina de Nuestra Carta empezada, primeros estilos añadidos y navbar. Carga del css y estilos de bootstrap

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Contenedor principal de la pagina -->
     <div class="container-fluid container-main ">
         <div class="row row1 ">
-            <div class="col col1 ">
+            <div class="col">
                 <!-- Barra de navegacion superior -->
                 <nav class="navbar navbar-expand-lg navbar-dark ">
                     <div class="container-fluid ">
@@ -46,17 +46,17 @@
                 </nav>
             </div>
         </div>
-          <!-- Row y column del texto descriptivo blanco situado en el centro de la pagina -->
+        <!-- Row y column del texto descriptivo blanco situado en el centro de la pagina -->
         <div class="row row2">
             <div class="col col-lg-5 col2 ">
                 <p>El restaurante de ramen Anteiku es conocido por su caldo de pollo cocinado durante horas con hierbas
                     y especias. Más de 30 años de experiencia confirman la calidad de este delicioso plato en un
                     ambiente que transportará al comensal al mismísimo Japón.
-                    Un lugar que no abandona su esencia nipona donde se disfruta de la autenticidad del ramen japonés.
+                    Un lugar que no abandona su esencia nipona donde se disfruta de la autenticidad del ramen.
                 </p>
             </div>
         </div>
-          <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
+        <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
         <div class="row row3 text-center">
             <div class="col col3">
                 <p>SÍGUENOS EN NUESTRAS REDES</p>
@@ -66,6 +66,8 @@
             </div>
         </div>
     </div>
+
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
