--- a/pages/carta.html
+++ b/pages/carta.html
@@ -12,14 +12,49 @@
 </head>
 
 <body>
+    <!-- Contenedor principal de la pagina -->
+    <div class="cointainer-fluid">
+        <div class="row row-lg-12 row1">
+            <div class="col col-lg-12">
+                <!-- Barra de navegacion superior -->
+                <nav class="navbar navbar-expand-lg navbar-dark ">
+                    <div class="container-fluid ">
+                        <a class="navbar-brand" href="../index.html"><img class="imgLogo"
+                                src="../img/Anteiku-logos_white.png" alt=""></a>
+                        <!-- Boton que despliega la barra de navegacion en responsive (movil) -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Barra de navegacion colapsable en responsive (movil) -->
+                        <div class="collapse navbar-collapse navbar-scroll" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link "  href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./carta.html">Nuestra carta</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="row row2"></div>
+        <div class="row row3"></div>
+    </div>
 
 
 
 
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
