--- a/pages/carta.html
+++ b/pages/carta.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Contenedor principal de la pagina -->
-    <div class="cointainer-fluid">
+    <div class="container-fluid container-main">
         <div class="row row-lg-12 row1">
             <div class="col col-lg-12">
                 <!-- Barra de navegacion superior -->
@@ -46,11 +46,11 @@
             </div>
         </div>
         <div class="row row2"></div>
-        <div class="row row3"></div>
+        <div class="row row3">
+
+            
+        </div>
     </div>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
