Todas las fotos de los platos añadidos. Creacion de la pagina principal de platos hecha con todas las cartas de los platos tanto para PC como para movil. Estructuracion y estilos dados. Comentarios añadidos.

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/stylesCarta.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Nuestra Carta</title>
 </head>
 
@@ -37,7 +38,7 @@
                                     <a class="nav-link" aria-current="page" href="./carta.html">Nuestra carta</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                                 </li>
                             </ul>
                         </div>
@@ -45,40 +46,71 @@
                 </nav>
             </div>
         </div>
+        <!-- Contenedor de las tarjetas de los platos -->
         <div class="row row2">
-            <div class="col carta-izq">
-                <div class="card card-1">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="col cartas">
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen1.jpeg" alt="Card image cap">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p style="text-align: center;" class="card-text">
+                            Ramen elaborado a base de pollo, algas, huevo y nuestra salsa secreta con un toque picante. </p>
+                            <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
-                <div class="card card-2">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen2.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p style="text-align: center;" class="card-text">Ramen elaborado a base de pollo marinado, diferentes verduras, huevo y salsa dulce.</p>
+                        <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
-                <div class="card card-2">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen3.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p style="text-align: center;" class="card-text">Ramen elaborado al estilo tradicional con caldo, ternera, verdura y un toque salado.</p>
+                        <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
-                <div class="card card-2">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen4.jpg" alt="Card image cap"  >
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p style="text-align: center;" class="card-text">Ramen elaborado con pollo, especias y verduras muy picantes. Para verdaderos amantes del picante.</p>
+                        <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen5.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <p style="text-align: center;" class="card-text">Ramen clasico. Pollo, verduras y sopa. Si no quieres jugartela, este es el tuyo.</p>
+                        <P style="text-align: center;">P.V.P 10€</P>
+                    </div>
+                </div>
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen6.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <p style="text-align: center;" class="card-text">Ramen de pescado, verduras y salsa de la casa.</p>
+                        <P style="text-align: center;">P.V.P 10€</P>
+                    </div>
+                </div>
+                <div class="card carta">
+                    <img class="card-img-top" src="../img/ramen7.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <p style="text-align: center;" class="card-text">Ramen tradicional mixto, carne y pescado se fusionan junto a nuestra salsa secreta. Perfecto para los indecisos.</p>
+                        <P style="text-align: center;">P.V.P 10€</P>
+                    </div>
+                </div>
+                
             </div>
 
-
-
+        </div>
+        <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
+        <div class="row row3 text-center">
+            <div class="col col3">
+                <p>SÍGUENOS EN NUESTRAS REDES</p>
+                <button type="button" class="btn btn-outline-secondary "><i class="bi bi-twitter"></i> Twitter</button>
+                <button type="button" class="btn btn-outline-secondary"><i class="bi bi-instagram"></i>
+                    Instagram</button>
+            </div>
         </div>
 
     </div>
