--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,24 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<link rel="stylesheet" href="../css/stylesContacto.css">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/stylesContacto.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Contacto</title>
 </head>
+
 <body>
+    <div class="container-fluid container-main">
+        <div class="row row-lg-12 row1">
+            <div class="col col-lg-12">
+                <!-- Barra de navegacion superior -->
+                <nav class="navbar navbar-expand-lg navbar-dark ">
+                    <div class="container-fluid ">
+                        <a class="navbar-brand" href="../index.html"><img class="imgLogo"
+                                src="../img/Anteiku-logos_white.png" alt=""></a>
+                        <!-- Boton que despliega la barra de navegacion en responsive (movil) -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Barra de navegacion colapsable en responsive (movil) -->
+                        <div class="collapse navbar-collapse navbar-scroll" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link " href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./carta.html">Nuestra carta</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="row row2">
+            <div class="col col2">
+                <div class="info">
+                    <p style="font-weight: bold;">CONTÁCTENOS</p>
+                    <p>Llámenos al 965783452</p>
+                    <p>Horario:
+                        Lunes a Viernes 9:00 a 23:00h
+                        Sabado y Domingo 8:30 a 1:00h
+                    </p>
+                    <hr>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="row row3">
+            <div class="col col3">
+                <form>
+                    <fieldset>
+                        <legend>Formulario de Contacto</legend>
+                        <div class="mb-3">
+                            <label for="disabledTextInput" class="form-label">Nombre</label>
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                            <label for="disabledTextInput" class="form-label ">Apellido</label>
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                            <label for="disabledTextInput" class="form-label">Email</label>
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                            <label for="disabledTextInput" class="form-label">Telefono</label>
+                            <input type="text" id="TextInput" class="form-control inputform" placeholder="Nombre">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <hr>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+        <div class="row row4">
+            <div class="col col-lg-12 col4">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7225.889807234104!2d-3.6965393520430117!3d40.40636031055113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2sMadrid!5e0!3m2!1ses!2ses!4v1675015400613!5m2!1ses!2ses"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+
+    </div>
 
 
 
 
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
