Proyecto totalmente comentado

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,6 +45,7 @@
                 </nav>
             </div>
         </div>
+        <!-- Row y column del apartado de datos del restaurante -->
         <div class="row row2">
             <div class="col col2">
                 <div class="info">
@@ -58,7 +59,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Formulario de contacto -->
         <div class="row row3">
             <div class="col col3">
                 <form>
@@ -89,9 +90,8 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-
-         <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
-         <div class="row row5 text-center">
+        <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
+        <div class="row row5 text-center">
             <div class="col col5">
                 <p>SÍGUENOS EN NUESTRAS REDES</p>
                 <button type="button" class="btn btn-outline-secondary "><i class="bi bi-twitter"></i> Twitter</button>
@@ -100,7 +100,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
