--- a/pages/carta.html
+++ b/pages/carta.html
@@ -49,6 +49,7 @@
         <!-- Contenedor de las tarjetas de los platos -->
         <div class="row row2">
             <div class="col cartas">
+                <!-- Plato 1 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen1.jpeg" alt="Card image cap">
                     <div class="card-body">
@@ -59,6 +60,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <!-- Plato 2 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen2.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -68,6 +70,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <!-- Plato 3 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen3.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -77,6 +80,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <!-- Plato 4 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen4.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -86,6 +90,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <!-- Plato 5 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen5.jpeg" alt="Card image cap">
                     <div class="card-body">
@@ -95,6 +100,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <!-- Plato 6 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen6.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -104,6 +110,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
+                <!-- Plato 7 -->
                 <div class="card carta">
                     <img class="card-img-top" src="../img/ramen7.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -113,9 +120,7 @@
                         <P style="text-align: center;">P.V.P 10€</P>
                     </div>
                 </div>
-
             </div>
-
         </div>
         <!-- Row y column de la parte inferior de la pagina, parte de Redes Sociales -->
         <div class="row row3 text-center">
@@ -126,9 +131,7 @@
                     Instagram</button>
             </div>
         </div>
-
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
